add_executable(70 dynamic_programming/70_climbStairs.cpp
        dynamic_programming/62_unique_paths.cpp)
add_executable(746 dynamic_programming/746_minCostClimbingStairs.cpp)
add_executable(62 dynamic_programming/62_unique_paths.cpp)
add_executable(59 array/59_Spiral_Matrix_2.cpp)
add_executable(48 array/48_rotate_image.cpp)
add_executable(704 array/704_binary_search.cpp)
add_executable(26 array/27/27_remove_element_in_place.cpp)
add_executable(203 list/203_remove_list_element.cpp)
add_executable(707 list/707_design_list.cpp)
add_executable(977 array/977_squares_of_sorted_array.cpp)
add_executable(209 array/209_mini_size_subarray_sum.cpp)
add_executable(206 list/206_reverseList.cpp)
add_executable(24 list/24_swap_node_inpairs.cpp)
add_executable(19 list/19_remove_nth_node_from_back.cpp)
add_executable(160 list/160_intersection_of_two_linked_lists.cpp)
add_executable(142 list/142_link_list_cycle_2.cpp)
add_executable(242 hashtable/242_valid_anagram.cpp)
add_executable(349 hashtable/349_intersection_of_two_arrays.cpp)
add_executable(202 hashtable/202_happy_number.cpp)
add_executable(1 hashtable/1_two_numbers_sum.cpp)
add_executable(454 hashtable/454_four_nums_sum_2.cpp)
add_executable(383 hashtable/383_ransom_note.cpp)
add_executable(15 hashtable/15_three_sum.cpp)
add_executable(344 string/344_reverse_string.cpp)
add_executable(541 string/541_reverse_string_2.cpp)
add_executable(151 string/151_reverse_word_in_string.cpp)
add_executable(28 string/28_strStr.cpp)
add_executable(dp_27 dual_pointer/27_remove_element_in_place.cpp)
add_executable(dp_151 dual_pointer/151_reverse_word_in_string.cpp)
add_executable(459 dual_pointer/459_repeated_substring.cpp)
add_executable(dp_206 dual_pointer/206_reverseList.cpp)
add_executable(dp_142 dual_pointer/142_link_list_cycle_2.cpp)
add_executable(232 stack_queue/232_implement_queue_using_stack.cpp)
add_executable(momenta_2 array/momenta_2.cpp)
