add_executable(70 dynamic_programming/70_climbStairs.cpp
        dynamic_programming/62_unique_paths.cpp)
add_executable(746 dynamic_programming/746_minCostClimbingStairs.cpp)
add_executable(62 dynamic_programming/62_unique_paths.cpp)
add_executable(59 array/59_Spiral_Matrix_2.cpp)
add_executable(48 array/48_rotate_image.cpp)
add_executable(704 array/704_binary_search.cpp)
add_executable(26 array/27/27_remove_element_in_place.cpp)
add_executable(203 list/203_remove_list_element.cpp)
add_executable(707 list/707_design_list.cpp)
add_executable(977 array/977_squares_of_sorted_array.cpp)
add_executable(209 array/209_mini_size_subarray_sum.cpp)
add_executable(206 list/206_reverseList.cpp)
add_executable(24 list/24_swap_node_inpairs.cpp)
add_executable(19 list/19_remove_nth_node_from_back.cpp)
add_executable(160 list/160_intersection_of_two_linked_lists.cpp)
add_executable(142 list/142_link_list_cycle_2.cpp)
add_executable(242 hashtable/242_valid_anagram.cpp)
add_executable(349 hashtable/349_intersection_of_two_arrays.cpp)
add_executable(202 hashtable/202_happy_number.cpp)
add_executable(1 hashtable/1_two_numbers_sum.cpp)
add_executable(454 hashtable/454_four_nums_sum_2.cpp)
add_executable(383 hashtable/383_ransom_note.cpp)
add_executable(15 hashtable/15_three_sum.cpp)
add_executable(344 string/344_reverse_string.cpp)
add_executable(541 string/541_reverse_string_2.cpp)
add_executable(151 string/151_reverse_word_in_string.cpp)
add_executable(28 string/28_strStr.cpp)
add_executable(dp_27 dual_pointer/27_remove_element_in_place.cpp)
add_executable(dp_151 dual_pointer/151_reverse_word_in_string.cpp)
add_executable(459 dual_pointer/459_repeated_substring.cpp)
add_executable(dp_206 dual_pointer/206_reverseList.cpp)
add_executable(dp_142 dual_pointer/142_link_list_cycle_2.cpp)
add_executable(232 stack_queue/232_implement_queue_using_stack.cpp)
add_executable(momenta_2 array/momenta_2.cpp)
add_executable(225 stack_queue/225_implement_stack_using_quque.cpp)
add_executable(20 stack_queue/20_valid_parentheses.cpp)
add_executable(1047 stack_queue/1047_remove_all_duplicate_char.cpp)
add_executable(150 stack_queue/150_reverse_polish_notation.cpp)
add_executable(239 stack_queue/239_slide_window_maximum.cpp)
add_executable(347 stack_queue/347_top_k_element.cpp)
add_executable(144 binary_tree/144_Binary_tree_preorder_travalsal.cpp)
add_executable(145 binary_tree/145_binary_tree_postorder_Traversal.cpp)
add_executable(94 binary_tree/94_binary_tree_inorder_traversal.cpp)
add_executable(102 binary_tree/102_binary_tree_levelorder_Traversal.cpp)
add_executable(4_17_hw2 hw/4_17/2.cpp)
add_executable(226 binary_tree/226_invert_binary_tree.cpp)
add_executable(101 binary_tree/101_symmetric_tree.cpp)
add_executable(104 binary_tree/104_maxdepth.cpp)
add_executable(559 binary_tree/559_maxDepth_Nary_tree.cpp)
add_executable(111 binary_tree/111_mini_depth_binary_tree.cpp)
add_executable(222 binary_tree/222_count_complete_tree_nodes.cpp)
add_executable(797 graph/797_all_paths_from_source_target.cpp)
add_executable(743 graph/743_network_delay_time.cpp)
add_executable(4_17_hw3 hw/4_17/3.cpp)
add_executable(1334 graph/1334_findcity.cpp)
add_executable(hw_4_10_1 hw/4_10/1.cpp)
add_executable(hw_4_10_2 hw/4_10/2.cpp)
add_executable(hw_4_10_3 hw/4_10/3.cpp)
add_executable(hw_4_24_1 hw/4_24/1.cpp)
add_executable(hw_4_24_2 hw/4_24/2.cpp)
add_executable(hw_4_24_3 hw/4_24/3.cpp)
add_executable(110 binary_tree/110_balanced_binary_tree.cpp)
add_executable(hw_4_17_1 hw/4_17/1.cpp)
